--- a/src/app/components/layout/header.component.html
+++ b/src/app/components/layout/header.component.html
@@ -3,7 +3,7 @@
 </div>
 <nav class="navbar">
     <div class="max-width">
-        <div class="logo text-start"><a href="#" class="text-tart">{{usuario.nombre}}.Dev</a></div>
+        <div class="logo text-start"><a href="#" class="text-tart">{{usuario.firstName}}.Dev</a></div>
         <ul class="menu">
             <li><a href="#home" class="menu-btn">Home</a></li>
             <li><a href="#about" class="menu-btn">Sobre mí</a></li>
