--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,58 +1,107 @@
 <!-- HOME SECTION -->
 <section class="home" id="home">
-    <div class="max-width">
-        <div class="home-content">
-            <div class="text-1">Hola, mi nombre es </div>
-            <div class="container">
-                <a class="button fa fa-pencil" href="#popup" *ngIf="isLogged"></a>
-                <div class="popup" id="popup">
-                    <div class="popup-inner">
-                        <div class="popupphoto">
-                            <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
-                                alt="">
-                        </div>
-                        <div class="popuptext">
-                            <h1>Actualizar mis Datos</h1>
-                            <div class="container">
-                                <form id="contact" action="" method="post">
-                                    <h3>Informacion</h3>
-                                    <h4></h4>
-                                    <fieldset>
-                                        <input placeholder="Nombre" id="idNombre" name="nombre"
-                                            [(ngModel)]="usuario.nombre" type="text" tabindex="1" required
-                                            autofocus>
-                                    </fieldset>
-                                    <fieldset>
-                                        <input placeholder="Apellido" id="idApellido" name="apellido"
-                                            [(ngModel)]="usuario.apellido" type="text" tabindex="2" required>
-                                    </fieldset>
-                                    <fieldset>
-                                            <textarea name="descripcion" id="idDes" [(ngModel)]="usuario.descripcion" cols="30" rows="10"></textarea>
-                                    </fieldset>
-                                    <fieldset>
-                                        <input placeholder="Titulo" id="idTitulo" name="titulo"
-                                            [(ngModel)]="usuario.titulo" type="text" tabindex="2" required>
-                                    </fieldset>
-                                    <fieldset>
-                                        <input placeholder="Imagen" id="idImg" name="imagen"
-                                            [(ngModel)]="usuario.fotoPerfil" type="text" tabindex="2" required>
-                                    </fieldset>
-                                    <fieldset>
-                                        <button name="submit" type="submit" id="contact-submit"
-                                            data-submit="...Sending" (click)="updateUsuario()">Actualizar</button>
-                                    </fieldset>
-                                </form>
-                            </div>
-                        </div>
-                        <a class="closepopup" href="#">X</a>
-                    </div>
-                </div>
+  <div class="max-width">
+    <div class="home-content">
+      <div class="text-1">Hola, mi nombre es {{ usuario.firstName }}</div>
+      <div class="container">
+        <a class="button fa fa-pencil" href="#popup" *ngIf="isLogged"></a>
+        <div class="popup" id="popup">
+          <div class="popup-inner">
+            <div class="popupphoto">
+              <img
+                src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
+                alt=""
+              />
             </div>
-            <div class="text-2"><span><</span><span>/</span>{{usuario.nombre}} {{usuario.apellido}} <span>></span>
+            <div class="popuptext">
+              <h1>Actualizar mis Datos</h1>
+              <div class="container">
+                <form id="contact" action="" method="post">
+                  <h3>Informacion</h3>
+                  <h4></h4>
+                  <fieldset>
+                    <input
+                      placeholder="Nombre"
+                      id="idName"
+                      name="name"
+                      [(ngModel)]="usuario.firstName"
+                      type="text"
+                      tabindex="1"
+                      required
+                      autofocus
+                    />
+                  </fieldset>
+                  <fieldset>
+                    <input
+                      placeholder="Apellido"
+                      id="idLastName"
+                      name="lastName"
+                      [(ngModel)]="usuario.lastName"
+                      type="text"
+                      tabindex="2"
+                      required
+                    />
+                  </fieldset>
+                  <fieldset>
+                    <textarea
+                      name="Biografia"
+                      id="idBiography"
+                      [(ngModel)]="usuario.biography"
+                      cols="30"
+                      rows="10"
+                    ></textarea>
+                  </fieldset>
+                  <fieldset>
+                    <input
+                      placeholder="Titulo"
+                      id="idGraduated"
+                      name="graduated"
+                      [(ngModel)]="usuario.graduated"
+                      type="text"
+                      tabindex="2"
+                      required
+                    />
+                  </fieldset>
+                  <fieldset>
+                    <input
+                      placeholder="imagen"
+                      id="idImageProfile"
+                      name="imageProfile"
+                      [(ngModel)]="usuario.imageProfile"
+                      type="text"
+                      tabindex="2"
+                      required
+                    />
+                  </fieldset>
+                  <fieldset>
+                    <button
+                      name="submit"
+                      type="submit"
+                      id="contact-submit"
+                      data-submit="...Sending"
+                      (click)="updateUsuario()"
+                    >
+                      Actualizar
+                    </button>
+                  </fieldset>
+                </form>
+              </div>
             </div>
-            <div class="text-3">Yo Soy  <span class="typing">{{usuario.titulo}}</span></div>
-            
-            <a href="https://github.com/ignam03" target="_blank"><i class="fa fa-github"></i> Github</a>
+            <a class="closepopup" href="#">X</a>
+          </div>
         </div>
+      </div>
+      <div class="text-2">
+        <span><</span><span>/</span>{{ usuario.firstName }}
+        {{ usuario.lastName }} <span>></span>
+      </div>
+      <div class="text-3">
+        Yo Soy <span class="typing">{{ usuario.graduated }}</span>
+      </div>
+
+      <a href="https://github.com/ignam03" target="_blank"
+        ><i class="fa fa-github"></i> Github</a
+      >
     </div>
+  </div>
 </section>
