--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -15,11 +15,11 @@
                 <div class="row">
                     <form control="" class="form-group">
                         <div class="row">
-                            <input type="text" name="username" id="username" [(ngModel)]="usuario.nombre" class="form__input" placeholder="Username">
+                            <input type="text" name="username" id="username" [(ngModel)]="usuario.firstName" class="form__input" placeholder="Username">
                         </div>
                         <div class="row">
                             <!-- <span class="fa fa-lock"></span> -->
-                            <input type="password" name="password" [(ngModel)]="usuario.apellido" id="password" class="form__input"
+                            <input type="password" name="password" [(ngModel)]="usuario.lastName" id="password" class="form__input"
                                 placeholder="Password">
                         </div>
                         <div class="row">
