--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,109 +1,169 @@
 <!-- SKILLS SECTION -->
 <section class="skills mb-5" id="skills">
-    <div class="max-width">
-        <h2 class="title">Mis skills</h2>
-        <div class="column left text-center">
-            <div class="text-per1">Mis skills & experiencia.</div>
-            <p style="" class=" text-per" >
-                Me especializo en el desarrollo de aplicaciones web tipo SPA con Angular, Typescript , Javascript,
-                Java y NodeJs.
-            </p>
-            <a class="mb-3 btn-per" href="https://github.com/ignam03" target="_blank">Github <i class="fa fa-github"></i></a>
-        </div>
-        <body>
-            <div class="container">
-                <a class="button" href="#popup9" *ngIf="isLogged">Agregar skill</a>
-                <div class="popup" id="popup9">
-                    <div class="popup-inner mt-5">
-                        <div class="popupphoto">
-                            <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
-                                alt="">
-                        </div>
-                        <div class="popuptext">
-                            <h1 class="text-center">Agregar Tegnologia</h1>
-                            <div class="container">
-                                <form id="contact" action="" method="post">
-                                    <h3 class="text-center">Tegnologia</h3>
-                                    <h4></h4>
-                                    <fieldset>
-                                        <input placeholder="Nombre de la tegnologia" id="idNombreTec" name="nombreTec"
-                                            [(ngModel)]="skillLoad.nombreHab" type="text" tabindex="1" required
-                                            autofocus>
-                                    </fieldset>
-                                    <fieldset>
-                                        <input placeholder="Porcentaje" id="idPorcentaje" name="porcentaje"
-                                            [(ngModel)]="skillLoad.porcentaje" type="text" tabindex="2" required>
-                                    </fieldset>
-                                    <fieldset>
-                                        <button name="submit" type="submit" id="contact-submit" data-submit="...Sending"
-                                            (click)="createdSkill()">Agregar</button>
-                                    </fieldset>
-                                </form>
-                            </div>
-                        </div>
-                        <a class="closepopup" href="#skills">X</a>
-                    </div>
-                </div>
-            </div>
-        </body>
-        <div class="skills-content">
-            
-            <div class="column right">
-                <div class="bars" *ngFor="let skill of habilidades">
-                    <body>
-                        <div class="container align-content-end">
-                            <div class="align-content-center">
-                                <a class="button fa fa-pencil " href="#popup1" 
-                                (click)="loadSkill(skill.habId)" *ngIf="isLogged"></a>
-                            <a class="button fa fa-trash" href="#popup2" 
-                                (click)="deleteSkill(skill.habId)" *ngIf="isLogged"></a>
-                            </div>
-                            <div class="popup" id="popup1">
-                                <div class="popup-inner mt-5">
-                                    <div class="popupphoto">
-                                        <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
-                                            alt="">
-                                    </div>
-                                    <div class="popuptext">
-                                        <h1 class="text-center">Actualizar Tegnologia</h1>
-                                        <div class="container">
-                                            <form id="contact" action="" method="post">
-                                                <h3 class="text-center">Tegnologia</h3>
-                                                <h4></h4>
-                                                <fieldset>
-                                                    <input placeholder="Nombre de la tegnologia" id="idNombreTec"
-                                                        name="nombreTec" [(ngModel)]="skillLoad.nombreHab"
-                                                        placeholder="{skillLoad.nombreHab}" type="text" tabindex="1"
-                                                        required autofocus>
-                                                </fieldset>
-                                                <fieldset>
-                                                    <input placeholder="Porcentaje" id="idPorcentaje" name="porcentaje"
-                                                        [(ngModel)]="skillLoad.porcentaje"
-                                                        placeholder="skillLoad.nombreHab" type="text" tabindex="2"
-                                                        required>
-                                                </fieldset>
-                                                <fieldset>
-                                                    <button name="submit" type="submit" id="contact-submit"
-                                                        data-submit="...Sending"
-                                                        (click)="updateSkill()">Actualizar</button>
-                                                </fieldset>
-                                            </form>
-                                        </div>
-                                    </div>
-                                    <a class="closepopup" href="#skills">X</a>
-                                </div>
-                            </div>
-                        </div>
-                    </body>
-                    <div class="info text-decoration-underline">
-                        <span class="text-center"> {{skill.nombreHab}}</span>
-                    </div>
-                            <circle-progress class="m-3"  [percent]="skill.porcentaje" [radius]="90" [outerStrokeWidth]="8"
-                                [innerStrokeWidth]="8" [outerStrokeColor]="'#dc143c'" [innerStrokeColor]="'#ca4a64'"
-                                [animation]="true" [animationDuration]="300"></circle-progress>
-                    
-                </div>
-            </div>
-        </div>
+  <div class="max-width">
+    <h2 class="title">Mis skills</h2>
+    <div class="column left text-center">
+      <div class="text-per1">Mis skills & experiencia.</div>
+      <p style="" class="text-per">
+        Me especializo en el desarrollo de aplicaciones web tipo SPA con
+        Angular, Typescript , Javascript, Java y NodeJs.
+      </p>
+      <a class="mb-3 btn-per" href="https://github.com/ignam03" target="_blank"
+        >Github <i class="fa fa-github"></i
+      ></a>
     </div>
+    <body>
+      <div class="container">
+        <a class="button" href="#popup9" *ngIf="isLogged">Agregar skill</a>
+        <div class="popup" id="popup9">
+          <div class="popup-inner mt-5">
+            <div class="popupphoto">
+              <img
+                src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
+                alt=""
+              />
+            </div>
+            <div class="popuptext">
+              <h1 class="text-center">Agregar Tegnologia</h1>
+              <div class="container">
+                <form id="contact" action="" method="post">
+                  <h3 class="text-center">Tegnologia</h3>
+                  <h4></h4>
+                  <fieldset>
+                    <input
+                      placeholder="Nombre de la tegnologia"
+                      id="idName"
+                      name="name"
+                      [(ngModel)]="skillLoad.name"
+                      type="text"
+                      tabindex="1"
+                      required
+                      autofocus
+                    />
+                  </fieldset>
+                  <fieldset>
+                    <input
+                      placeholder="Porcentaje"
+                      id="idAverage"
+                      name="average"
+                      [(ngModel)]="skillLoad.average"
+                      type="text"
+                      tabindex="2"
+                      required
+                    />
+                  </fieldset>
+                  <fieldset>
+                    <button
+                      name="submit"
+                      type="submit"
+                      id="contact-submit"
+                      data-submit="...Sending"
+                      (click)="createdSkill()"
+                    >
+                      Agregar
+                    </button>
+                  </fieldset>
+                </form>
+              </div>
+            </div>
+            <a class="closepopup" href="#skills">X</a>
+          </div>
+        </div>
+      </div>
+    </body>
+    <div class="skills-content">
+      <div class="column right">
+        <div class="bars" *ngFor="let skill of habilidades">
+          <body>
+            <div class="container align-content-end">
+              <div class="align-content-center">
+                <a
+                  class="button fa fa-pencil"
+                  href="#popup1"
+                  (click)="loadSkill(skill.id)"
+                  *ngIf="isLogged"
+                ></a>
+                <a
+                  class="button fa fa-trash"
+                  href="#popup2"
+                  (click)="deleteSkill(skill.id)"
+                  *ngIf="isLogged"
+                ></a>
+              </div>
+              <div class="popup" id="popup1">
+                <div class="popup-inner mt-5">
+                  <div class="popupphoto">
+                    <img
+                      src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
+                      alt=""
+                    />
+                  </div>
+                  <div class="popuptext">
+                    <h1 class="text-center">Actualizar Tegnologia</h1>
+                    <div class="container">
+                      <form id="contact" action="" method="post">
+                        <h3 class="text-center">Tegnologia</h3>
+                        <h4></h4>
+                        <fieldset>
+                          <input
+                            placeholder="Nombre de la tegnologia"
+                            id="idName"
+                            name="name"
+                            [(ngModel)]="skillLoad.name"
+                            placeholder="{skillLoad.name}"
+                            type="text"
+                            tabindex="1"
+                            required
+                            autofocus
+                          />
+                        </fieldset>
+                        <fieldset>
+                          <input
+                            placeholder="Porcentaje"
+                            id="idAverage"
+                            name="average"
+                            [(ngModel)]="skillLoad.average"
+                            placeholder="skillLoad.average"
+                            type="text"
+                            tabindex="2"
+                            required
+                          />
+                        </fieldset>
+                        <fieldset>
+                          <button
+                            name="submit"
+                            type="submit"
+                            id="contact-submit"
+                            data-submit="...Sending"
+                            (click)="updateSkill()"
+                          >
+                            Actualizar
+                          </button>
+                        </fieldset>
+                      </form>
+                    </div>
+                  </div>
+                  <a class="closepopup" href="#skills">X</a>
+                </div>
+              </div>
+            </div>
+          </body>
+          <div class="info text-decoration-underline">
+            <span class="text-center"> {{ skill.name }}</span>
+          </div>
+          <circle-progress
+            class="m-3"
+            [percent]="skill.average"
+            [radius]="90"
+            [outerStrokeWidth]="8"
+            [innerStrokeWidth]="8"
+            [outerStrokeColor]="'#dc143c'"
+            [innerStrokeColor]="'#ca4a64'"
+            [animation]="true"
+            [animationDuration]="300"
+          ></circle-progress>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
